# mistral-burn

./: .gitignore  Cargo.toml  convert_model.py
examples/: chatbot.rs
src/: attention.rs  cache.rs  feedforward.rs  lib.rs  rmsnorm.rs  rope.rs  transformer.rs
