[package]
name = "mistral-burn"
version = "0.1.0"
edition = "2021"

[dependencies]
burn = { git = "https://github.com/tracel-ai/burn.git", features = ["ndarray", "wgpu"] }
sentencepiece = "0.11.2"
thiserror = "1.0.51"

# temp
serde = "1"

rmp = "0.8.12"

[dev-dependencies]
anyhow = "1.0.76"

[profile.dev]
opt-level = 3